--- a/programs/study-skills/index.html
+++ b/programs/study-skills/index.html
@@ -143,39 +143,39 @@
                 <ul class="collection with-header">
                     <li class="collection-header">
                         <h4 class="light"><b>The Curriculum</b>: Study Skills Part 1</h4>
-                        <p>The five-week program, with two (1) hour sessions per week, costs $1,250.</p>
+                        <p>The ten-week program, with one (1) hour session per week, costs $1,250.</p>
                         <p>Over the course of five weeks, we will follow the plan below:</p>
                     </li>
                     <li class="collection-item">
-                        <p><b>Week 1</b></p>
+                        <p><b>Weeks 1 &amp; 2</b></p>
                         <ul class="bullets">
                             <li>Intro/Study Skills Checklist</li>
                             <li>Review Checklist/What's the plan?</li>
                         </ul>
                         <br> </li>
                     <li class="collection-item">
-                        <p><b>Week 2</b></p>
+                        <p><b>Weeks 3 &amp; 4</b></p>
                         <ul class="bullets">
                             <li>Time Management</li>
                             <li>Organizational Skills</li>
                         </ul>
                         <br> </li>
                     <li class="collection-item">
-                        <p><b>Week 3</b></p>
+                        <p><b>Weeks 5 &amp; 6</b></p>
                         <ul class="bullets">
                             <li>Note-Taking/Study Guide Prep</li>
                             <li>History</li>
                         </ul>
                         <br> </li>
                     <li class="collection-item">
-                        <p><b>Week 4</b></p>
+                        <p><b>Weeks 7 &amp; 8</b></p>
                         <ul class="bullets">
                             <li>Note-Taking/Study Guide Prep</li>
                             <li>Science</li>
                         </ul>
                         <br> </li>
                     <li class="collection-item">
-                        <p><b>Week 5</b></p>
+                        <p><b>Weeks 9 &amp; 10</b></p>
                         <ul class="bullets">
                             <li>Essay Writing</li>
                             <li>Essay Writing Continued/Skills Wrap Up</li>
