--- a/programs/study-skills/index.html
+++ b/programs/study-skills/index.html
@@ -189,7 +189,7 @@
                     <li class="collection-header">
                         <h4 class="light"><b>The Curriculum</b>: Study Skills Part 2</h4>
                         <p>The five-week program, with one (1) hour session per week, costs $550.</p>
-                        <p>Over the course of five weeks, we will follow the plan below:</p>
+                        <p>Over the course of five weeks, we will follow the plan below, with weekly subject follow up and calendar process:</p>
                     </li>
                     <li class="collection-item">
                         <p><b>Week 1</b></p>
