--- a/contact/index.html
+++ b/contact/index.html
@@ -47,6 +47,7 @@
     <!-- Author -->
     <meta name="author" content="Ryan McBride, Shardul Joshi">
     <title>Konjoian Education Center</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <div class="z-depth-1">
     <div class="site-header hide-on-med-and-down">
