--- a/programs/study-skills/index.html
+++ b/programs/study-skills/index.html
@@ -47,6 +47,7 @@
     <!-- Author -->
     <meta name="author" content="Ryan McBride, Shardul Joshi">
     <title>Study Skills</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <div class="z-depth-1">
     <div class="site-header hide-on-med-and-down">
@@ -144,7 +145,7 @@
                     <li class="collection-header">
                         <h4 class="light"><b>The Curriculum</b>: Study Skills Part 1</h4>
                         <p>The ten-week program, with one (1) hour session per week, costs $1,250.</p>
-                        <p>Over the course of five weeks, we will follow the plan below:</p>
+                        <p>Over the course of five weeks, we will follow the plan below, with weekly subject follow up and calendar process:</p>
                     </li>
                     <li class="collection-item">
                         <p><b>Weeks 1 &amp; 2</b></p>
@@ -189,7 +190,7 @@
                     <li class="collection-header">
                         <h4 class="light"><b>The Curriculum</b>: Study Skills Part 2</h4>
                         <p>The five-week program, with one (1) hour session per week, costs $550.</p>
-                        <p>Over the course of five weeks, we will follow the plan below, with weekly subject follow up and calendar process:</p>
+                        <p>Over the course of five weeks, we will follow the plan below:</p>
                     </li>
                     <li class="collection-item">
                         <p><b>Week 1</b></p>
