--- a/sitemap.html
+++ b/sitemap.html
@@ -47,6 +47,7 @@
     <!-- Author -->
     <meta name="author" content="Ryan McBride, Shardul Joshi">
     <title>Sitemap</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
     .sitemap-intro {
         background: url(/images/backgrounds/blue-313322_1280.jpg) center;
