--- a/programs/test-prep/index.html
+++ b/programs/test-prep/index.html
@@ -46,6 +46,7 @@
     <!-- Author -->
     <meta name="author" content="Ryan McBride, Shardul Joshi">
     <title>Test Preparation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <div class="z-depth-1">
     <div class="site-header hide-on-med-and-down">
