--- a/programs/index.html
+++ b/programs/index.html
@@ -133,7 +133,7 @@
                             <div class="card-image" style="background-image:url(/images/assets/IMG_2317.jpeg); background-size:cover; height:270px"> </div>
                             <div class="card-content"> <span class="card-title"><a href="programs/subject-tutoring/index.html">Subject Tutoring</a></span>
                                 <p>Sign up for specific subject tutoring for numerous subjects and AP course prep.</p>
-                                <br> <a href="programs/subject-tutoring/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
+                                <br> <a href="subject-tutoring/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
                         </div>
                     </div>
                     <div class="col l6 m6">
@@ -141,7 +141,7 @@
                             <div class="card-image" style="background-image:url(/images/assets/IMG_2312.jpeg); background-size:cover; height:270px"> </div>
                             <div class="card-content"> <span class="card-title"><a href="programs/test-prep/">Test Preparation</a></span>
                                 <p>Get started with test prep to see tremendous improvements in your test scores</p>
-                                <br> <a href="programs/test-prep/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
+                                <br> <a href="test-prep/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
                         </div>
                     </div>
                     <div class="col l6 m6">
@@ -149,14 +149,14 @@
                             <div class="card-image" style="background-image:url(/images/assets/IMG_2316.jpeg); background-size:cover; height:270px"> </div>
                             <div class="card-content"> <span class="card-title"><a href="programs/study-skills/">Study Skills</a></span>
                                 <p>Get help with various school-related skills such as organization and time management.</p>
-                                <br> <a href="programs/study-skills/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
+                                <br> <a href="study-skills/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
                         </div>
                     </div>
                     <div class="col l6 m6">
                         <div class="card">
                             <div class="card-image" style="background-image:url(/images/assets/IMG_2308.jpeg); background-size:cover; height:270px"> </div>
                             <div class="card-content"> <span class="card-title"><a href="programs/college-counseling/">College Counseling</a></span>
-                                <p>The application process is tough. So that is why we offer college counseling sessions to help you with your college application skills<br><br></p> <a href="programs/college-counseling/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
+                                <p>The application process is tough. So that is why we offer college counseling sessions to help you with your college application skills<br><br></p> <a href="college-counseling/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
                         </div>
                     </div>
                 </div>
