--- a/home.html
+++ b/home.html
@@ -120,7 +120,7 @@
                     <h2 class="light" id="home-page-title">Konjoian Education Center</h2>
                     <h6 class="l200"><i>An Easier Way to Succeed</i></h6>
                     <br>
-                    <br> <a href="inquire/" class="btn black white-text">Inquire</a> <a href="testimonials/" class="btn-flat white-text">Testimonials</a> </div>
+                    <br> <a href="contact/" class="btn black white-text">Inquire</a> <a href="testimonials/" class="btn-flat white-text">Testimonials</a> </div>
             </div>
         </div>
         <a href="#home-content">
@@ -145,7 +145,7 @@
             <div class="col m4 center"> <img src="https://maxcdn.icons8.com/Color/PNG/96/Users/student_male-96.png" title="https://icons8.com - Icon pack by Icons8" alt="Student Male" width="58">
                 <h5 class="light">Tailored to You</h5>
                 <div class="div-ider-color"></div>
-                <p class="grey-text 500">We tailor our studies to what you as individual need in order to make you successful.</p>
+                <p class="grey-text 500">We tailor our studies to what you as an individual need in order to make you successful.</p>
             </div>
         </div>
         <div class="row container" id="programs-home">
@@ -153,7 +153,7 @@
             <br>
             <br>
             <h3 class="light center">Get Started</h3>
-            <p class="col s12" style="text-align: center">Our individualized programs are tailored to each individual student's needs. We offer one-on-one sessions to give students the best attention. Click the image for program to find out more.</p>
+            <p class="col s12" style="text-align: center">Our individualized programs are tailored to each individual student's needs. We offer one-on-one sessions to give students the best attention.</p>
             <div class="col m6">
                 <div class="card">
                     <div class="card-image" style="background-image:url(images/assets/IMG_2317.jpeg); background-size:cover; height:270px"> </div>
@@ -166,7 +166,7 @@
                 <div class="card">
                     <div class="card-image" style="background-image:url(images/assets/IMG_2312.jpeg); background-size:cover; height:270px"> </div>
                     <div class="card-content"> <span class="card-title"><a href="programs/test-prep/">Test Preparation</a></span>
-                        <p>Get started with test prep to see tremendous improvements in your test scores</p>
+                        <p>Get started with test prep to see tremendous improvements in your test scores.</p>
                         <br> <a href="programs/test-prep/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
                 </div>
             </div>
@@ -182,7 +182,7 @@
                 <div class="card">
                     <div class="card-image" style="background-image:url(images/assets/IMG_2308.jpeg); background-size:cover; height:270px"> </div>
                     <div class="card-content"> <span class="card-title"><a href="programs/college-counseling/">College Counseling</a></span>
-                        <p>The application process is tough. So that is why we offer college counseling sessions to help you with your college application skills</p> <a href="programs/college-counseling/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
+                        <p>The application process is tough. We offer college counseling sessions to help you with your college application skills.</p> <a href="programs/college-counseling/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
                 </div>
             </div>
         </div>
