--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <meta name="author" content="Ryan McBride, Shardul Joshi">
     <title>Konjoian Education Center</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="noindex">
 </head>
 
 <body>
