--- a/programs/index.html
+++ b/programs/index.html
@@ -13,15 +13,15 @@
     <!-- Framework (null) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     <script src="http://www.w3schools.com/lib/w3data.js"></script>
-    <!-- Favorite Icons -->
+<!-- Favorite Icons -->
     <!-- Favicon for Opera SpeedDial -->
-    <link rel="icon" type="image/png" href="images/favicons/favicon_opera.png" />
+    <link rel="icon" type="image/png" href="/images/favicons/favicon_opera.png" />
     <!-- Traditional Favicon -->
-    <link rel="icon" type="image/x-icon" href="images/favicons/FavIcon%20copy.png" />
+    <link rel="icon" type="image/x-icon" href="/images/favicons/FavIcon%20copy.png" />
     <!-- Apple Touch Icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/favicons/apple-touch-144.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/favicons/apple-touch-72.png">
-    <link rel="apple-touch-icon-precomposed" href="images/favicons/apple-touch-48.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images/favicons/apple-touch-144.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images/favicons/apple-touch-72.png">
+    <link rel="apple-touch-icon-precomposed" href="/images/favicons/apple-touch-48.png">
     <!-- Social Networking Meta-Data -->
     <!-- Twitter Card Summary -->
     <meta name="twitter:card" content="The Konjoian Education center is focused on creating an easier way to succeed.">
