Update Testimonial - Mondejar

--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -171,6 +171,19 @@
                             <div class="m-b container-fluid">David Konjoian is the best in the business!</div>
                             <br> </div>
                     </div>
+                    <!-- BOX FOR TESTIMONIAL -->
+                    <div class="card panel-profile m-b-0">
+                        <!-- COLORED HEADING -->
+                        <div class="panel-heading r"></div>
+                        <!-- CONTENT FOR TESTIMONIAL -->
+                        <div class="panel-body text-center">
+                            <!-- PROFILE PICTURE --><img class="panel-profile-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Ic_account_circle_48px.svg/2000px-Ic_account_circle_48px.svg.png">
+                            <!-- NAME -->
+                            <h5 class="panel-title">Meredith Mondejar</h5>
+                            <!-- QUOTE -->
+                            <div class="m-b container-fluid">Hey! Speaking of grades, thank Mike for us! Claire got an A in math (and in all of her other subjects -- HIGH honors!) Feeling proud of my girl!! And realize that a large part of a great semester comes from removing the stress that she experienced early on in math! Thank you for being the solution to that issue and for being the right answer for her!</div>
+                            <br> </div>
+                    </div>
                 </div>
                 <div class="col m6">
                     <div class="card-panel indigo white-text hide-on-small-only">
