--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -177,7 +177,7 @@
                         <div class="panel-heading r"></div>
                         <!-- CONTENT FOR TESTIMONIAL -->
                         <div class="panel-body text-center">
-                            <!-- PROFILE PICTURE --><img class="panel-profile-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Ic_account_circle_48px.svg/2000px-Ic_account_circle_48px.svg.png">
+                            <!-- PROFILE PICTURE --><img class="panel-profile-img" src="https://www.brandeps.com/icon-download/A/Account-circle-01.svg">
                             <!-- NAME -->
                             <h5 class="panel-title">Meredith Mondejar</h5>
                             <!-- QUOTE -->
