--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -177,7 +177,7 @@
                         <div class="panel-heading r"></div>
                         <!-- CONTENT FOR TESTIMONIAL -->
                         <div class="panel-body text-center">
-                            <!-- PROFILE PICTURE --><img class="panel-profile-img" src="https://www.brandeps.com/icon-download/A/Account-circle-01.svg">
+                            <!-- PROFILE PICTURE --><img class="panel-profile-img" src="http://www.publicdomainpictures.net/pictures/10000/velka/abstract-architecture-11287678240s8xM.jpg">
                             <!-- NAME -->
                             <h5 class="panel-title">Meredith Mondejar</h5>
                             <!-- QUOTE -->
