--- a/programs/index.html
+++ b/programs/index.html
@@ -131,7 +131,7 @@
                     <div class="col l6 m6">
                         <div class="card">
                             <div class="card-image" style="background-image:url(/images/assets/IMG_2317.jpeg); background-size:cover; height:270px"> </div>
-                            <div class="card-content"> <span class="card-title"><a href="programs/subject-tutoring/index.html">Subject Tutoring</a></span>
+                            <div class="card-content"> <span class="card-title"><a href="subject-tutoring/index.html">Subject Tutoring</a></span>
                                 <p>Sign up for specific subject tutoring for numerous subjects and AP course prep.</p>
                                 <br> <a href="subject-tutoring/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
                         </div>
@@ -139,7 +139,7 @@
                     <div class="col l6 m6">
                         <div class="card">
                             <div class="card-image" style="background-image:url(/images/assets/IMG_2312.jpeg); background-size:cover; height:270px"> </div>
-                            <div class="card-content"> <span class="card-title"><a href="programs/test-prep/">Test Preparation</a></span>
+                            <div class="card-content"> <span class="card-title"><a href="test-prep/">Test Preparation</a></span>
                                 <p>Get started with test prep to see tremendous improvements in your test scores</p>
                                 <br> <a href="test-prep/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
                         </div>
@@ -147,7 +147,7 @@
                     <div class="col l6 m6">
                         <div class="card">
                             <div class="card-image" style="background-image:url(/images/assets/IMG_2316.jpeg); background-size:cover; height:270px"> </div>
-                            <div class="card-content"> <span class="card-title"><a href="programs/study-skills/">Study Skills</a></span>
+                            <div class="card-content"> <span class="card-title"><a href="study-skills/">Study Skills</a></span>
                                 <p>Get help with various school-related skills such as organization and time management.</p>
                                 <br> <a href="study-skills/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
                         </div>
@@ -155,7 +155,7 @@
                     <div class="col l6 m6">
                         <div class="card">
                             <div class="card-image" style="background-image:url(/images/assets/IMG_2308.jpeg); background-size:cover; height:270px"> </div>
-                            <div class="card-content"> <span class="card-title"><a href="programs/college-counseling/">College Counseling</a></span>
+                            <div class="card-content"> <span class="card-title"><a href="college-counseling/">College Counseling</a></span>
                                 <p>The application process is tough. So that is why we offer college counseling sessions to help you with your college application skills<br><br></p> <a href="college-counseling/" class="card-link btn-floating black" style="position:absolute;top:251px;right:30px;"><i class="material-icons">link</i></a> </div>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
         <div class="container">
             <div class="row">
                 <div class="col l6 s12"> <span>Konjoian Education Center</span> </div>
-                <div class="col l4 offset-l2 s12"> <a href="../index.html#programs-home">Programs</a>&nbsp;&bull; <a href="../testimonials/">Testimonials</a>&nbsp;&bull; <a href="http://facebook.com/konjoianeducationcenter">Facebook</a> </div>
+                <div class="col l4 offset-l2 s12"> <a href="/programs/">Programs</a>&nbsp;&bull; <a href="../testimonials/">Testimonials</a>&nbsp;&bull; <a href="http://facebook.com/konjoianeducationcenter">Facebook</a> </div>
             </div>
         </div>
     </footer>
