--- a/programs/subject-tutoring/index.html
+++ b/programs/subject-tutoring/index.html
@@ -199,7 +199,7 @@
     <div id="mathematics" class="modal modal-fixed-footer">
         <div class="modal-content" >
             <h4 class="light">Mathematics</h4>
-            <blockquote>Mathematics is a very challenging topic for many students. They dread going to the math classroom. We want to help these students feel more at home and less stressed in math.</blockquote>
+            <blockquote>Mathematics is a very challenging topic for many students. They dread going to the math classroom. We want to help these students feel more at home and less stressed during math class.</blockquote>
             <br>
             <div class="divider"></div>
             <h5 class="light">Algebra I &amp; II</h5>
