--- a/index.html
+++ b/index.html
@@ -42,12 +42,11 @@
     <!-- Description -->
     <meta name="description" content="The Konjoian Education center is focused on creating an easier way to succeed.">
     <!-- Keywords -->
-    <meta name="keywords" content="konjoian, david, palladino, michael, education, tutor, tutoring, study, learn, easier, way, succeed, andover, massachusetts, ma, lawrence, school, high, middle, greenhouse, best, testimonials, work">
+    <meta name="keywords" content="tutoring andover, andover ma, andover mass, tutoring service, tutors, near, me, konjoian, david, palladino, michael, education, tutor, tutoring, study, learn, easier, way, succeed, andover, massachusetts, ma, lawrence, school, high, middle, greenhouse, best, testimonials, work">
     <!-- Author -->
     <meta name="author" content="Ryan McBride, Shardul Joshi">
     <title>Konjoian Education Center</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="noindex">
 </head>
 
 <body>
