--- a/contact/index.html
+++ b/contact/index.html
@@ -136,14 +136,14 @@
                     <div class="panel-heading panel-heading-contact r"></div>
                     <!-- CONTENT FOR TESTIMONIAL -->
                     <div class="panel-body text-center">
-                        <!-- PROFILE PICTURE --><img class="panel-profile-img" src="../images/assets/When_I_grow_up_I_want_to_be_COOL!_fixed.JPG">
+                        <!-- PROFILE PICTURE --><img class="panel-profile-img" src="/images/assets/contact-photos.JPG">
                         <!-- NAME -->
                         <h5 class="panel-title">David Konjoian</h5>
                         <h6 class="grey-text text-darken-2">Owner/Educational Consulant</h6>
                         <br>
                         <!-- QUOTE -->
                         <div class="m-b container-fluid"> <a href="tel:(508) 265-0693">(508) 265-0693</a>
-                            <br> <a href="mailto:konjoianeducationcenter@gmail.com">konjoianeducationcenter@gmail.com</a> </div>
+                            <br> <a href="mailto:konjoianeducationcenter@gmail.com">david.konjoian@konjoianeducationcenter.com</a> </div>
                         <br> </div>
                 </div>
             </div>
@@ -153,14 +153,14 @@
                     <div class="panel-heading panel-heading-contact r"></div>
                     <!-- CONTENT FOR TESTIMONIAL -->
                     <div class="panel-body text-center">
-                        <!-- PROFILE PICTURE --><img class="panel-profile-img" src="../images/assets/When_I_grow_up_I_want_to_be_COOL!_fixed.JPG">
+                        <!-- PROFILE PICTURE --><img class="panel-profile-img" src="/images/assets/contact-photos.JPG">
                         <!-- NAME -->
                         <h5 class="panel-title">Michael Foster</h5>
                         <h6 class="grey-text text-darken-2">Partner/Senior Math Consultant</h6>
                         <br>
                         <!-- QUOTE -->
                         <div class="m-b container-fluid"> <a href="tel:(978) 376-8133">(978) 376-8133</a>
-                            <br> <a href="mailto:konjoianeducationcenter@gmail.com">konjoianeducationcenter@gmail.com</a> </div>
+                            <br> <a href="mailto:konjoianeducationcenter@gmail.com">michael.foster@konjoianeducationcenter.com</a> </div>
                         <br> </div>
                 </div>
             </div>
@@ -170,14 +170,14 @@
                     <div class="panel-heading panel-heading-contact r"></div>
                     <!-- CONTENT FOR TESTIMONIAL -->
                     <div class="panel-body text-center">
-                        <!-- PROFILE PICTURE --><img class="panel-profile-img" src="../images/assets/When_I_grow_up_I_want_to_be_COOL!_fixed.JPG">
+                        <!-- PROFILE PICTURE --><img class="panel-profile-img" src="/images/assets/contact-photos.JPG">
                         <!-- NAME -->
                         <h5 class="panel-title">Michael Palladino</h5>
                         <h6 class="grey-text text-darken-2">Chief Marketing/Technology Officer</h6>
                         <br>
                         <!-- QUOTE -->
                         <div class="m-b container-fluid"> <a href="(781) 983-7116">(781) 983-7116</a>
-                            <br> <a href="mailto:konjoianeducationcenter@gmail.com">konjoianeducationcenter@gmail.com</a> </div>
+                            <br> <a href="mailto:konjoianeducationcenter@gmail.com">michael.palladino@konjoianeducationcenter.com</a> </div>
                         <br> </div>
                 </div>
             </div>
@@ -187,7 +187,7 @@
                     <div class="panel-heading panel-heading-contact r"></div>
                     <!-- CONTENT FOR TESTIMONIAL -->
                     <div class="panel-body text-center">
-                        <!-- PROFILE PICTURE --><img class="panel-profile-img" src="../images/assets/When_I_grow_up_I_want_to_be_COOL!_fixed.JPG">
+                        <!-- PROFILE PICTURE --><img class="panel-profile-img" src="/images/assets/contact-photos.JPG">
                         <!-- NAME -->
                         <h5 class="panel-title">Webmaster</h5>
                         <h6 class="grey-text text-darken-2">Webmaster</h6>
