Switch Rita and Heather

--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -254,11 +254,11 @@
                             <!-- NAME -->
                             <h5 class="panel-title">Rita Gardner</h5>
                             <!-- QUOTE -->
-                            <div class="m-b container-fluid">Dave and is his staff are exceptional. He has supported our three sons, through middle school, high school and entry to college with a variety of tutoring support and standardized test taking. These include the SSAT, the SAT and the ACT. He supported our oldest son through high school (HS) tutoring, his application and acceptance process to Brown University. He worked across competing athletic schedules to make sure he was prepared for both the SAT and ACT.<br>
+                            <div class="m-b container-fluid">Dave and is his staff are exceptional. He has supported our three sons, through middle school, high school and entry to college with a variety of tutoring support and standardized test taking. These include the SSAT, the SAT and the ACT. He supported our oldest son through high school (HS) tutoring, his application and acceptance process to Brown University. He worked across competing athletic schedules to make sure he was prepared for both the SAT and ACT.<br><br>
 
-With our middle son he supported him at the end of middle school with his high school admission process, ultimately being admitted to Phillips Academy Andover.  Now working with him on college exams, vetting the college process and helping him to find best college matches. <br>
+With our middle son he supported him at the end of middle school with his high school admission process, ultimately being admitted to Phillips Academy Andover.  Now working with him on college exams, vetting the college process and helping him to find best college matches. <br><br>
 
-And currently working with our last son, on the HS admissions  process. <br>
+And currently working with our last son, on the HS admissions  process. <br><br>
 
 Each of our sons varied widely in their needed level of support, Dave and his team were able to work with each child's needs. He creates an excellent rapport with each student, and helps motivate them to be successful without undo pressure. As parents he is quick to respond with a vast array of questions, providing experience and supporting us to navigate our sons needs as individuals . We can not recommend his team's services any higher, a true Godsend.</div>
                             <br> </div>
