--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -194,7 +194,7 @@
                         <div class="panel-heading l"></div>
                         <!-- CONTENT FOR TESTIMONIAL -->
                         <div class="panel-body text-center">
-                            <!-- PROFILE PICTURE --><img class="panel-profile-img" src="https://scontent.fbos1-1.fna.fbcdn.net/v/t1.0-1/p160x160/11202808_10153082775102680_6027004671531396837_n.jpg?oh=e98907e26c4059960403ff8e37e9dae6&oe=5861569D">
+                            <!-- PROFILE PICTURE --><img class="panel-profile-img" src="/images/assets/abstract-architecture-11287678240s8xM.jpg">
                             <!-- NAME -->
                             <h5 class="panel-title">Heather Campbell Callaghan</h5>
                             <!-- QUOTE -->
