--- a/sitemap.html
+++ b/sitemap.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <!-- Set Site Title to United States English -->
 <html lang="en-us">
-
 <head>
     <!-- Stylesheets -->
     <!-- Custom Stylesheet -->
-    <link href="../stylesheets/konjoianedu.css" type="text/css" rel="stylesheet">
+    <link href="/stylesheets/konjoianedu.css" type="text/css" rel="stylesheet">
     <!-- Font -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="http://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
@@ -66,7 +65,7 @@
     <!-- end grey section -->
     <nav class="z-depth-0">
         <!-- DROPDOWN FOR PROGRAMS -->
-        <ul id="programs" class="dropdown-content">
+        <ul id="programs" class="dropdown-content dropdown-content-all-other-pages">
             <li><a href="/home.html#programs-home">Programs Home</a></li>
             <li class="divider"></li>
             <li><a href="/programs/subject-tutoring/">Subject Tutoring</a></li>
@@ -166,8 +165,8 @@
     <footer class="dark">
         <div class="container">
             <div class="row">
-                <div class="col l6 s12"> <span>Konjoian Education Center</span> </div>
-                <div class="col l4 offset-l2 s12"> <a href="../index.html#programs-home">Programs</a>&nbsp;&bull; <a href="../testimonials/">Testimonials</a>&nbsp;&bull; <a href="http://facebook.com/konjoianeducationcenter">Facebook</a> </div>
+                <div class="col l6 m12 s12"> <span>Konjoian Education Center</span> </div>
+                <div class="col l4 offset-l2 m12 s12"> <a href="../index.html#programs-home">Programs</a>&nbsp;&bull; <a href="../testimonials/">Testimonials</a>&nbsp;&bull; <a href="http://facebook.com/konjoianeducationcenter">Facebook</a>&nbsp;&bull; <a href="/sitemap.html">Sitemap</a></div>
             </div>
         </div>
     </footer>
