--- a/home.html
+++ b/home.html
@@ -11,9 +11,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300" rel="stylesheet">
     <link href="https://file.myfontastic.com/n6vo44Re5QaWo8oCKShBs7/icons.css" rel="stylesheet">
     <!-- Framework (null) -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
     <script src="http://www.w3schools.com/lib/w3data.js"></script>
-<!-- Favorite Icons -->
+    <!-- Favorite Icons -->
     <!-- Favicon for Opera SpeedDial -->
     <link rel="icon" type="image/png" href="/images/favicons/favicon_opera.png" />
     <!-- Traditional Favicon -->
@@ -47,12 +47,11 @@
     <!-- Author -->
     <meta name="author" content="Ryan McBride, Shardul Joshi">
     <title>Konjoian Education Center</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1"> </head>
 <div class="navbar-fixed">
     <nav>
         <!-- DROPDOWN FOR PROGRAMS -->
-        <ul id="programs" class="dropdown-content">
+        <ul id="programs" class="dropdown-content dropdown-content-home-page">
             <li><a href="/programs/index.html">Programs Home</a></li>
             <li class="divider"></li>
             <li><a href="/programs/subject-tutoring/">Subject Tutoring</a></li>
@@ -120,7 +119,13 @@
                     <h2 class="light" id="home-page-title">Konjoian Education Center</h2>
                     <h6 class="l200"><i>An Easier Way to Succeed</i></h6>
                     <br>
-                    <br> <a href="inquire/" class="btn black white-text">Inquire</a> <a href="testimonials/" class="btn-flat white-text">Testimonials</a> </div>
+                    <br>
+                    <!-- Calendly link widget begin -->
+                    <link href="https://calendly.com/assets/external/widget.css" rel="stylesheet">
+                    <script src="https://calendly.com/assets/external/widget.js" type="text/javascript"></script> <a href="" class="btn black" onclick="Calendly.showPopupWidget('https://calendly.com/konjoian/session');return false;">Schedule</a>
+                    <!-- Calendly link widget end -->
+                    <a href="testimonials/" class="btn-flat white-text">Testimonials</a> 
+                </div>
             </div>
         </div>
         <a href="#home-content">
@@ -190,14 +195,14 @@
     <footer class="dark">
         <div class="container">
             <div class="row">
-                <div class="col l6 s12"> <span>Konjoian Education Center</span> </div>
-                <div class="col l4 offset-l2 s12"> <a href="#programs-home">Programs</a>&nbsp;&bull; <a href="testimonials/">Testimonials</a>&nbsp;&bull; <a href="http://facebook.com/konjoianeducationcenter">Facebook</a> </div>
+                <div class="col l6 m12 s12"> <span>Konjoian Education Center</span> </div>
+                <div class="col l4 offset-l2 m12 s12"> <a href="../index.html#programs-home">Programs</a>&nbsp;&bull; <a href="../testimonials/">Testimonials</a>&nbsp;&bull; <a href="http://facebook.com/konjoianeducationcenter">Facebook</a>&nbsp;&bull; <a href="sitemap.html">Sitemap</a></div>
             </div>
         </div>
     </footer>
     <!-- Keep JQuery First to Avoid Bugs -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
     <script src="javascript/init.js"></script>
     <script src="javascript/smoothscroll.js"></script>
     <script>
@@ -206,8 +211,7 @@
             i[r] = i[r] || function () {
                 (i[r].q = i[r].q || []).push(arguments)
             }, i[r].l = 1 * new Date();
-            a = s.createElement(o)
-                , m = s.getElementsByTagName(o)[0];
+            a = s.createElement(o), m = s.getElementsByTagName(o)[0];
             a.async = 1;
             a.src = g;
             m.parentNode.insertBefore(a, m)
