--- a/programs/index.html
+++ b/programs/index.html
@@ -165,8 +165,8 @@
     <footer class="dark">
         <div class="container">
             <div class="row">
-                <div class="col l6 s12"> <span>Konjoian Education Center</span> </div>
-                <div class="col l4 offset-l2 s12"> <a href="/programs/">Programs</a>&nbsp;&bull; <a href="../testimonials/">Testimonials</a>&nbsp;&bull; <a href="http://facebook.com/konjoianeducationcenter">Facebook</a> </div>
+                <div class="col l6 m12 s12"> <span>Konjoian Education Center</span> </div>
+                <div class="col l4 offset-l2 m12 s12"> <a href="../index.html#programs-home">Programs</a>&nbsp;&bull; <a href="../testimonials/">Testimonials</a>&nbsp;&bull; <a href="http://facebook.com/konjoianeducationcenter">Facebook</a>&nbsp;&bull; <a href="/sitemap.html">Sitemap</a></div>
             </div>
         </div>
     </footer>
