--- a/programs/subject-tutoring/index.html
+++ b/programs/subject-tutoring/index.html
@@ -57,7 +57,7 @@
     <!-- end grey section -->
     <nav class="z-depth-0">
         <!-- DROPDOWN FOR PROGRAMS -->
-        <ul id="programs" class="dropdown-content">
+        <ul id="programs" class="dropdown-content dropdown-content-all-other-pages">
             <li><a href="/programs/">Programs Home</a></li>
             <li class="divider"></li>
             <li><a href="/programs/subject-tutoring/">Subject Tutoring</a></li>
@@ -286,8 +286,8 @@
     <footer class="dark">
         <div class="container">
             <div class="row">
-                <div class="col l6 s12"> <span>Konjoian Education Center</span> </div>
-                <div class="col l4 offset-l2 s12"> <a href="../../index.html#programs-home">Programs</a>&nbsp;&bull; <a href="../../testimonials/">Testimonials</a>&nbsp;&bull; <a href="http://facebook.com/konjoianeducationcenter">Facebook</a> </div>
+                <div class="col l6 m12 s12"> <span>Konjoian Education Center</span> </div>
+                <div class="col l4 offset-l2 m12 s12"> <a href="../index.html#programs-home">Programs</a>&nbsp;&bull; <a href="../testimonials/">Testimonials</a>&nbsp;&bull; <a href="http://facebook.com/konjoianeducationcenter">Facebook</a>&nbsp;&bull; <a href="/sitemap.html">Sitemap</a></div>
             </div>
         </div>
     </footer>
