--- a/home.html
+++ b/home.html
@@ -73,14 +73,14 @@
             <ul class="side-nav" id="mobile-demo">
                 <li>
                     <div class="userView"> <img class="background" src="/images/favicons/islam.png">
-                        <a href="#!user"><img class="circle" src="/images/favicons/yuge.png"></a> <a href="#!name"><span class="white-text name">Konjoian Education Center</span></a> <a href="#!email"><span class="white-text email">David Konjoian</span></a> </div>
+                        <a href="#!user"><img class="circle" src="/images/favicons/apple-touch-144.png"></a> <a href="#!name"><span class="white-text name">Konjoian Education Center</span></a> <a href="#!email"><span class="white-text email">David Konjoian</span></a> </div>
                 </li>
                 <li>
                     <ul class="collapsible collapsible-accordion">
                         <li><a class="collapsible-header waves-effect" style="text-align: left">Programs</a>
                             <div class="collapsible-body">
                                 <ul>
-                                    <li><a href="/programs/index.html">Programs Home</a></li>
+                                    <li><a href="/programs/">Programs Home</a></li>
                                     <li><a href="/programs/subject-tutoring/">Subject Tutoring</a></li>
                                     <li><a href="/programs/test-prep/">Test Preparation</a></li>
                                     <li><a href="/programs/study-skills/">Study Skills</a></li>
@@ -98,11 +98,6 @@
                 <li>
                     <ul class="collapsible collapsible-accordion">
                         <li><a class="collapsible-header waves-effect" style="text-align: left" href="/testimonials/">Testimonials</a> </li>
-                    </ul>
-                </li>
-                <li>
-                    <ul class="collapsible collapsible-accordion">
-                        <li><a class="collapsible-header waves-effect" style="text-align: left" href="/team/">Team</a> </li>
                     </ul>
                 </li>
             </ul>
