--- a/contact/index.html
+++ b/contact/index.html
@@ -126,7 +126,7 @@
     <div class="container">
         <div class="card-panel">
             <h4 class="light">Contact us Today</h4>
-            <h6 class="grey-text text-darken-2">Drop us a line!</h6> </div>
+            <h6 class="grey-text text-darken-2 flow-text">Drop us a line!</h6> </div>
     </div>
     <div class="row container-yuge">
         <div class="col m12 container-fluid">
