--- a/programs/college-counseling/index.html
+++ b/programs/college-counseling/index.html
@@ -125,7 +125,7 @@
     <div class="container">
         <div class="card-panel">
             <h4 class="light">College Counseling</h4>
-            <h6 class="grey-text text-darken-2">We all want you to make it to college. But the application process is tough. So that is why we offer college counseling sessions to help you with your college application skills.</h6>
+            <h6 class="grey-text text-darken-2 flow-text">We all want you to make it to college. But the application process is tough. So that is why we offer college counseling sessions to help you with your college application skills.</h6>
         </div>
         <div class="col s12">
             <ul class="collection with-header">
