--- a/programs/index.html
+++ b/programs/index.html
@@ -125,7 +125,7 @@
             <div class="row container">
                 <div class="card-panel">
                     <h4 class="light">Programs</h4>
-                    <h6 class="grey-text text-darken-2">Check out the programs we offer!</h6> </div>
+                    <h6 class="grey-text text-darken-2 flow-text">Check out the programs we offer!</h6> </div>
                 <div class="row" id="programs-home">
                     <br>
                     <div class="col l6 m6">
