--- a/programs/study-skills/index.html
+++ b/programs/study-skills/index.html
@@ -129,7 +129,7 @@
         <div class="intro-card">
             <div class="card-panel">
                 <h4 class="light">Study Skills</h4>
-                <h6 class="grey-text text-darken-2">Studying is an essential part of your school career. There are also many methods and skills required for studying. We offer programs to help you with time management and organizational skills. The regular program has two parts (listed separately below) and there is another one-part program for middle school.</h6> 
+                <h6 class="grey-text text-darken-2 flow-text">Studying is an essential part of your school career. There are also many methods and skills required for studying. We offer programs to help you with time management and organizational skills. The regular program has two parts (listed separately below) and there is another one-part program for middle school.</h6> 
             </div>
             <div class="row">
             <div class="col s12">
