--- a/programs/subject-tutoring/index.html
+++ b/programs/subject-tutoring/index.html
@@ -126,7 +126,7 @@
     <div class="container">
         <div class="card-panel">
             <h4 class="light">Subject Tutoring</h4>
-            <h6 class="grey-text text-darken-2">One of our programs is subject tutoring for both specific subjects and AP course prep.</h6> 
+            <h6 class="grey-text text-darken-2 flow-text">One of our programs is subject tutoring for both specific subjects and AP course prep.</h6> 
         </div>
         <div class="row">
             <div class="col m6 s12">
