--- a/programs/test-prep/index.html
+++ b/programs/test-prep/index.html
@@ -125,7 +125,7 @@
     <div class="container">
         <div class="card-panel">
             <h4 class="light">Test Preparation</h4>
-            <h6 class="grey-text text-darken-2">Several times in your life, you will have to take tests in order to apply to schools, to be able to follow a certain career, or many other programs. Our test preparation program is intended to help you do the best you possible can when it really counts. We offer test preparation for the SAT, ACT, PSAT, and SAT Subject Tests. We also offer test preparation for the SSAT, ISEE, and HSPT. At the graduate level, we can help with the GRE, GMAT, and LSAT.</h6> </div>
+            <h6 class="grey-text text-darken-2 flow-text">We offer test preparation for the SAT, ACT, PSAT, and SAT Subject Tests. We also offer test preparation for the SSAT, ISEE, and HSPT. At the graduate level, we can help with the GRE, GMAT, and LSAT.</h6> </div>
         <div class="row">
             <div class="col s12">
                 <ul class="tabs">
