--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -127,7 +127,7 @@
             <div class="row">
                 <div class="card-panel">
                     <h4 class="light">Testimonials</h4>
-                    <h6 class="grey-text text-darken-2">Check out our reviews!</h6> </div>
+                    <h6 class="grey-text text-darken-2 flow-text">Check out our reviews!</h6> </div>
                 <div class="col m6">
                     <div class="card-panel indigo white-text hide-on-med-and-up">
                         <h5 class="light">Ratings</h5> <span>5.0<i class="material-icons vertical-align">star_rate</i></span>
