--- a/programs/index.html
+++ b/programs/index.html
@@ -57,7 +57,7 @@
     <!-- end grey section -->
     <nav class="z-depth-0">
         <!-- DROPDOWN FOR PROGRAMS -->
-        <ul id="programs" class="dropdown-content">
+        <ul id="programs" class="dropdown-content dropdown-content-all-other-pages">
             <li><a href="/home.html#programs-home">Programs Home</a></li>
             <li class="divider"></li>
             <li><a href="/programs/subject-tutoring/">Subject Tutoring</a></li>
