--- a/programs/study-skills/index.html
+++ b/programs/study-skills/index.html
@@ -63,10 +63,11 @@
             <li><a href="/programs/subject-tutoring/">Subject Tutoring</a></li>
             <li><a href="/programs/study-skills/">Study Skills</a></li>
             <li><a href="/programs/test-prep/">Test Preparation</a></li>
-            <li><a href="/programs/college/">College Counseling</a></li>
+            <li><a href="/programs/college-counseling/">College Counseling</a></li>
         </ul>
         <div class="nav-wrapper container-fluid">
-            <!-- LINK FOR MOBILE NAVIGATION --><a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a> <a href="/home.html" class="brand-logo hide-on-large-only"><img src="/images/favicons/yuge2.png">onjoian Education Center</a>
+            <!-- LINK FOR MOBILE NAVIGATION --><a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+            <a href="/home.html" class="brand-logo hide-on-large-only"><img src="/images/favicons/yuge2.png">onjoian Education Center</a>
             <!-- UNORDERED LIST FOR DESKTOP NAV -->
             <ul class="hide-on-med-and-down">
                 <li><a class="dropdown-button" href="#!" data-activates="programs">Programs<i class="material-icons right nav_i">arrow_drop_down</i></a></li>
@@ -92,7 +93,7 @@
                                     <li><a href="/programs/subject-tutoring/">Subject Tutoring</a></li>
                                     <li><a href="/programs/test-prep/">Test Preparation</a></li>
                                     <li><a href="/programs/study-skills/">Study Skills</a></li>
-                                    <li><a href="/programs/college-couseling/">College Counseling</a></li>
+                                    <li><a href="/programs/college-counseling/">College Counseling</a></li>
                                 </ul>
                             </div>
                         </li>
