--- a/testimonials/index.html
+++ b/testimonials/index.html
@@ -63,7 +63,7 @@
             <li><a href="/programs/subject-tutoring/">Subject Tutoring</a></li>
             <li><a href="/programs/study-skills/">Study Skills</a></li>
             <li><a href="/programs/test-prep/">Test Preparation</a></li>
-            <li><a href="/programs/college/">College Counseling</a></li>
+            <li><a href="/programs/college-counseling/">College Counseling</a></li>
         </ul>
         <div class="nav-wrapper container-fluid">
             <!-- LINK FOR MOBILE NAVIGATION --><a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
