--- a/programs/subject-tutoring/index.html
+++ b/programs/subject-tutoring/index.html
@@ -195,7 +195,9 @@
                     </div>
                 </div>
             </div>
-            <a href="/contact/index.html" class="waves-effect waves-light inquire-button btn">INQUIRE TODAY</a>
+            <div class="row">
+                <a href="#datmodal" class="waves-effect waves-light modal-trigger btn schedule-button">Schedule a session</a>
+            </div>
         </div>
     </div>
     <!-- Mathematics Modal -->
@@ -294,6 +296,18 @@
             </div>
         </div>
     </footer>
+    <!-- Calendly Scheduling Modal -->
+    <div id="datmodal" class="modal bottom-sheet">
+        <div class="modal-content">
+            <h4>Schedule a Session<i class="material-icons right modal-action modal-close">close</i></h4>
+            <br>
+            <br>
+            <!-- Calendly inline widget begin -->
+            <div class="calendly-inline-widget" data-url="https://calendly.com/konjoian/session" style="min-width:320px;height:580px;"></div>
+            <script type="text/javascript" src="https://calendly.com/assets/external/widget.js"></script>
+            <!-- Calendly inline widget end -->
+        </div>
+    </div>
     <!-- Keep JQuery First to Avoid Bugs -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
