--- a/programs/study-skills/index.html
+++ b/programs/study-skills/index.html
@@ -126,7 +126,7 @@
     </nav>
     <!-- BEGIN SITE CONTENT -->
     <main>
-    <div class="container-yuge">
+    <div class="container">
         <div class="intro-card">
             <div class="card-panel">
                 <h4 class="light">Study Skills</h4>
